# GPU-Geometry-Benchmarks

./: .clang-format  CMakeLists.txt  LICENSE  README.md  l_build.sh  w_build_vs2022.bat
src/: CMakeLists.txt  buckets.cpp  buckets.h  clDeviceManager.cpp  clDeviceManager.h  clUtils.cpp  clUtils.h  cpu.cpp  cpu.h  gpu.cpp  gpu.h  kernel.cl  kernel.cu  main.cpp  structs.cpp  structs.h  timer.cpp  timer.h
